# ask-sf

./: Dockerfile  README.md  docker-compose.yaml
backend/: setup.cfg  setup.py
backend/asksf/: server.py
backend/asksf/routes/: execute.py
frontend/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: AvatarAnon.tsx  AvatarLondon.tsx  ChatContent.tsx  ChatHeader.tsx  ChatInputBox.tsx  app.tsx  globals.css  main.tsx
frontend/src/data/: index.tsx
frontend/src/hooks/: useGetMessages.ts
frontend/src/shadcn/components/: alert.tsx  main-nav.tsx  multiselect.tsx  recent-events.tsx  search.tsx  user-nav.tsx
