[metadata]
name = asksf
version = 0.0.0

[options]
packages = find:
install_requires =
    authlib
    aiobotocore
    black
    boto3
    cachetools
    fastapi
    httpx
    isort
    itsdangerous
    mysql-connector-python
    pandas
    psycopg2
    pydantic[email]
    PyGithub
    python-multipart
    sentry-sdk
    uvicorn
    pytest
    pytest-asyncio
python_requires = >=3.9

[options.extras_require]
debug =
    debugpy